Add .gitignore file and format HTML for better readability

--- a/index.html
+++ b/index.html
@@ -698,12 +698,14 @@
     <div
     class="w-10/12 md:w-11/12 max-w-[1080px] pt-4  mx-auto relative">
     <!--for desktop-->
-        <h2 class=" hidden md:block font-mullish font-extrabold text-center text-2xl text-white leading-[1.2] mb-3">
+        <h2 class=" hidden md:block font-mullish font-extrabold text-center 
+        text-2xl text-white leading-[1.2] mb-3">
             Explore RazorpayX powered Business Banking
         </h2>
     
     <!--for mobile-->
-    <h2 class="inline-block md:hidden font-mullish text-[2.5rem] leading-[1.2] font-extrabold mx-auto text-white">
+    <h2 class="inline-block md:hidden font-mullish text-[2.5rem] 
+    leading-[1.2] font-extrabold mx-auto text-white">
         Explore
         <img
                 src="./Images/razorpayX.svg"
@@ -716,7 +718,8 @@
     </h2>
         <div class="bg-greenLight w-6 h-1 mx-auto"></div>
         <!--main feature box-->
-        <div class="w-full min-h-[440px] flex md:border border-grayText border-opacity-50 rounded-md relative">
+        <div class="w-full min-h-[440px] flex 
+        rounded-md relative">
             <img src="./Images/x-flame-1.png" alt="" loading="lazy"
 
             class="-top-[240px] -scale-x-[1] rotate-180 md:scale-x-[1] md:rotate-0 
